--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'net.sourceforge.owlapi:owlapi-apibinding:4.5.19'
     compile 'net.sourceforge.owlapi:owlapi-impl:4.5.19'
     compile 'net.sourceforge.owlapi:owlapi-parsers:4.5.19'
+    compile 'org.apache.jena:apache-jena-libs:3.17.0'
     
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
