--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -21,12 +21,12 @@ repositories {
 // In this section you declare the dependencies for your production and test code
 dependencies {
     // The production code uses the SLF4J logging API at compile time
-    compile 'org.slf4j:slf4j-api:1.7.25'
-    compile 'org.slf4j:slf4j-simple:1.7.25'
-    compile 'com.beust:jcommander:1.72'
-    compile 'org.semanticweb.elk:elk-owlapi:0.4.3'
-    compile 'org.apache.jena:apache-jena-libs:3.17.0'
-    compile 'de.tu-dresden.inf.lat.jcel:jcel-owlapi:0.24.1'
+    implementation 'org.slf4j:slf4j-api:1.7.25'
+    implementation 'org.slf4j:slf4j-simple:1.7.25'
+    implementation 'com.beust:jcommander:1.72'
+    implementation 'org.semanticweb.elk:elk-owlapi:0.4.3'
+    implementation 'org.apache.jena:apache-jena-libs:3.17.0'
+    implementation 'de.tu-dresden.inf.lat.jcel:jcel-owlapi:0.24.1'
     
     
 
@@ -34,7 +34,7 @@ dependencies {
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
 
 run {
