--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -10,6 +10,21 @@
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
 apply plugin: 'application'
+apply plugin: 'groovy'
+
+
+sourceSets {
+    main {
+        groovy {
+            srcDirs = ['src/main/java']
+        }
+        java {
+            srcDirs = []
+        }
+    }
+   
+}
+
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -28,7 +43,7 @@ dependencies {
     implementation 'org.apache.jena:apache-jena-libs:3.17.0'
     implementation 'de.tu-dresden.inf.lat.jcel:jcel-owlapi:0.24.1'
     
-    
+    implementation 'org.codehaus.groovy:groovy-all:2.4.15'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
