--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'org.semanticweb.elk:elk-owlapi:0.4.3'
     implementation 'org.apache.jena:apache-jena-libs:3.17.0'
     implementation 'de.tu-dresden.inf.lat.jcel:jcel-owlapi:0.24.1'
+    implementation 'net.sourceforge.owlapi:org.semanticweb.hermit:1.3.8.413'
     
     implementation 'org.codehaus.groovy:groovy-all:2.4.15'
 
