--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,31 @@
-absl-py==0.12.0
-astunparse==1.6.3
-cachetools==4.2.1
+astroid==2.5.2
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+cycler==0.10.0
 dataclasses==0.8
-flatbuffers==1.12
-gast==0.3.3
-gensim==3.8.3
-google-auth==1.27.1
-google-auth-oauthlib==0.4.3
-google-pasta==0.2.0
-grpcio==1.32.0
-h5py==2.10.0
+gensim==4.0.0
 idna==2.10
-importlib-metadata==3.7.2
+isort==5.8.0
 JPype1==1.2.1
-Keras-Preprocessing==1.1.2
-Markdown==3.3.4
+kiwisolver==1.3.1
+lazy-object-proxy==1.6.0
+matplotlib==3.3.4
+mccabe==0.6.1
 numpy==1.19.5
-oauthlib==3.1.0
-opt-einsum==3.3.0
 pandas==1.1.5
-Pillow==8.1.1
-protobuf==3.15.5
-py4j==0.10.9.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+Pillow==8.2.0
+pylint==2.7.4
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
+PyYAML==5.4.1
 requests==2.25.1
-requests-oauthlib==1.3.0
-rsa==4.7.2
 scipy==1.5.4
 six==1.15.0
-smart-open==4.2.0
-tensorboard==2.4.1
-tensorboard-plugin-wit==1.8.0
-tensorflow-estimator==2.4.0
-tensorflow-gpu==2.4.1
-termcolor==1.1.0
-torch==1.7.1+cu101
-torchaudio==0.7.2
-torchvision==0.8.2+cu101
+smart-open==5.0.0
+toml==0.10.2
+typed-ast==1.4.2
 typing-extensions==3.7.4.3
-urllib3==1.26.3
-Werkzeug==1.0.1
+urllib3==1.26.4
 wrapt==1.12.1
-zipp==3.4.1
