--- a/mowl/examples/GNNSim/config/taxonomy-rels.yaml
+++ b/mowl/examples/GNNSim/config/taxonomy-rels.yaml
@@ -1,6 +1,6 @@
 general:
   ontology: data/go.owl
-  graph-gen-method: taxonomy
+  graph-gen-method: taxonomy_rels
 
 rgcn-params:
   lr: 0.004
@@ -17,4 +17,4 @@ files:
   train_inter_file: "data/4932.train_interactions.pkl"
   test_inter_file: "data/4932.test_interactions.pkl"
   data_file: "data/swissprot.pkl"
-  output_model: "data/tax_yeast_model.pt"
+  output_model: "data/taxRels_yeast_model.pt"
