To add OWL2Vec*

--- a/mowl/examples/GNNSim/config/taxonomy-rels.yaml
+++ b/mowl/examples/GNNSim/config/taxonomy-rels.yaml
@@ -3,14 +3,14 @@ general:
   graph-gen-method: taxonomy_rels
 
 rgcn-params:
-  lr: 0.004
-  n-hidden: 2
+  lr: 0.00001
+  n-hidden: 1
   batch-size: 32
-  epochs: 32
-  dropout: 0.1
+  epochs: 64
+  dropout: 0.3
   num-bases: -1
   normalization: False
-  self-loop: False
+  self-loop: True
   seed: 0
 
 files:
