Fix config files

--- a/mowl/examples/GNNSim/config/dl2vec.yaml
+++ b/mowl/examples/GNNSim/config/dl2vec.yaml
@@ -8,9 +8,10 @@ rgcn-params:
   batch-size: 32
   epochs: 64
   dropout: 0.3
-  num-bases: 11
+  num-bases: -1
   normalization: False
   self-loop: True
+  min_edges: 1
   seed: 0
 
 files:
