--- a/mowl/examples/GNNSim/config/owl2vec_star.yaml
+++ b/mowl/examples/GNNSim/config/owl2vec_star.yaml
@@ -3,14 +3,15 @@ general:
   graph-gen-method: owl2vec_star
   
 rgcn-params:
-  lr: 0.004
-  n-hidden: 2
+  lr: 0.00001
+  n-hidden: 1
   batch-size: 32
-  epochs: 32
-  dropout: 0.1
+  epochs: 64
+  dropout: 0.3
   num-bases: -1
   normalization: False
   self-loop: False
+  min_edges: 1
   seed: 0
 
 files:
