--- a/mowl/examples/GNNSim/config/taxonomy.yaml
+++ b/mowl/examples/GNNSim/config/taxonomy.yaml
@@ -9,9 +9,9 @@ rgcn-params:
   epochs: 64
   dropout: 0.3
   num-bases: -1
-  normalization: False
-  min_edges: 1
+  normalization: True
   self-loop: False
+  min-edges: 1
   seed: 0
 
 files:
