--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,56 @@
 astroid==2.5.2
+attrs==21.2.0
 certifi==2020.12.5
 chardet==4.0.0
+charset-normalizer==2.0.4
 click==7.1.2
 cycler==0.10.0
 dataclasses==0.8
+decorator==4.4.2
+dgl==0.6.1
+dgl-cu100==0.5.3
+filelock==3.0.12
 gensim==4.0.0
+grpcio==1.40.0
 idna==2.10
+importlib-metadata==4.7.0
+isodate==0.6.0
 isort==5.8.0
+joblib==1.0.1
 JPype1==1.2.1
 kiwisolver==1.3.1
 lazy-object-proxy==1.6.0
 matplotlib==3.3.4
 mccabe==0.6.1
+msgpack==1.0.2
+networkx==2.5.1
 numpy==1.19.5
+Owlready2==0.34
 pandas==1.1.5
 Pillow==8.2.0
+protobuf==3.17.3
 pylint==2.7.4
 pyparsing==2.4.7
 python-dateutil==2.8.1
+python-Levenshtein==0.12.2
 pytz==2021.1
 PyYAML==5.4.1
+ray==1.6.0
+rdflib==5.0.0
+redis==3.5.3
 requests==2.25.1
+scikit-learn==0.24.2
 scipy==1.5.4
 six==1.15.0
+sklearn==0.0
 smart-open==5.0.0
+tabulate==0.8.9
+tensorboardX==2.4
+threadpoolctl==2.2.0
 toml==0.10.2
+torch==1.9.0
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
 urllib3==1.26.4
 wrapt==1.12.1
+zipp==3.5.0
