--- a/mowl/examples/GNNSim/config/taxonomy-rels.yaml
+++ b/mowl/examples/GNNSim/config/taxonomy-rels.yaml
@@ -3,15 +3,15 @@ general:
   graph-gen-method: taxonomy_rels
 
 rgcn-params:
-  lr: 0.00001
-  n-hidden: 1
+  lr: 0.0001
+  n-hidden: 4
   batch-size: 32
   epochs: 64
   dropout: 0.3
   num-bases: -1
-  normalization: False
-  self-loop: False
-  min-edges: 1
+  normalization: True
+  self-loop: True
+  min-edges: 200
   seed: 0
 
 files:
