--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -48,10 +48,11 @@ dependencies {
     implementation 'org.slf4j:slf4j-simple:1.7.25'
     implementation 'com.beust:jcommander:1.72'
     implementation 'org.semanticweb.elk:elk-owlapi:0.4.3'
+    implementation 'net.sourceforge.owlapi:owlapi-distribution:5.1.0'
     implementation 'org.apache.jena:apache-jena-libs:3.17.0'
     implementation 'de.tu-dresden.inf.lat.jcel:jcel-owlapi:0.24.1'
-    implementation 'net.sourceforge.owlapi:org.semanticweb.hermit:1.3.8.413'
-    
+    implementation 'net.sourceforge.owlapi:org.semanticweb.hermit:1.3.8.510'    
+
     implementation 'org.codehaus.groovy:groovy-all:2.4.15'
     implementation 'org.scala-lang:scala-library:2.11.12'
 
