--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,13 +1,25 @@
+# .readthedocs.yaml
+# Read the Docs configuration file
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
+
+# Required
+version: 2
+
+# Set the version of Python and other tools you might need
 build:
-  image: latest
+  os: ubuntu-20.04
+  tools:
+    python: "3.9"
 
-formats: []
-
-# Build from the docs/ directory with Sphinx
+# Build documentation in the docs/ directory with Sphinx
 sphinx:
-  configuration: docs/conf.py
+   configuration: docs/conf.py
 
+# If using Sphinx, optionally build your docs in additional formats such as PDF
+# formats:
+#    - pdf
+
+# Optionally declare the Python requirements required to build your docs
 python:
-  version: 3.8
-  use_system_site_packages: true
-  setup_py_install: false
+   install:
+   - requirements: docs/requirements.txt
