--- a/mowl/examples/GNNSim/config/gd/taxonomy-rels.yaml
+++ b/mowl/examples/GNNSim/config/gd/taxonomy-rels.yaml
@@ -1,16 +1,16 @@
 general:
   ontology: data/go.owl
-  graph-gen-method: dl2vec
-  
+  graph-gen-method: taxonomy_rels
+
 rgcn-params:
   lr: 0.0001
-  n-hidden: 3
+  n-hidden: 2
   batch-size: 32
   epochs: 32
-  dropout: 0.2
-  regularization: 0
+  dropout: 0
+  regularization: 0.0001
   num-bases: -1
-  normalization: False
+  normalization: True
   self-loop: False
   min-edges: 100
   seed: 0
@@ -20,4 +20,6 @@ files:
   valid_inter_file: "data/4932.valid_interactions.pkl"
   test_inter_file: "data/4932.test_interactions.pkl"
   data_file: "data/4932.annotations.tsv"
-  output_model: "data/dl2vec_yeast_model.pt"
+  terms_file: "data/4932.terms.tsv"
+  precomputed_edges_file: "data/4932.edges_tax_rels.pkl"
+  output_model: "data/taxRels_yeast_model.pt"
