--- a/mowl/examples/GNNSim/config/ppi/human/taxonomy-rels.yaml
+++ b/mowl/examples/GNNSim/config/ppi/human/taxonomy-rels.yaml
@@ -1,17 +1,17 @@
 general:
   ontology: data/go.owl
-  graph-gen-method: taxonomy
+  graph-gen-method: taxonomy_rels
 
 rgcn-params:
   lr: 0.0001
-  n-hidden: 3
+  n-hidden: 2
   batch-size: 32
   epochs: 32
-  dropout: 0.3
-  regularization: 0.01
+  dropout: 0
+  regularization: 0.0001
   num-bases: -1
   normalization: True
-  self-loop: True
+  self-loop: False
   min-edges: 100
   seed: 0
 
@@ -20,4 +20,6 @@ files:
   valid_inter_file: "data/9606.valid_interactions.pkl"
   test_inter_file: "data/9606.test_interactions.pkl"
   data_file: "data/9606.annotations.tsv"
-  output_model: "data/tax_human_model.pt"
+  terms_file: "data/9606.terms.tsv"
+  precomputed_edges_file: "data/9606.edges_tax_rels.pkl"
+  output_model: "data/taxRels_human_model.pt"
