--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -1,4 +1,4 @@
-name: mowl
+name: mowldev
 channels:
   - conda-forge
 dependencies:
@@ -23,7 +23,10 @@ dependencies:
   - gensim
   - openjdk
   - gradle
+  - rdflib
   - pip
   - pip:
     - pykeen
     - https://github.com/thibaudmartinez/node2vec/releases/download/v0.2.0/node2vec-0.1.0-cp37-cp37m-linux_x86_64.whl
+  - jupyter
+  - ipykernel
