--- a/mowl/examples/GNNSim/config/ppi/human/taxonomy.yaml
+++ b/mowl/examples/GNNSim/config/ppi/human/taxonomy.yaml
@@ -1,14 +1,15 @@
 general:
-  ontology: data/go.owl
+  ontology: data/ppi/go.owl
   graph-gen-method: taxonomy
+  use-case: ppi
 
 rgcn-params:
-  lr: 0.0001
+  lr: 0.00001
   n-hidden: 3
-  batch-size: 32
-  epochs: 32
-  dropout: 0
-  regularization: 0.0001
+  batch-size: 128
+  epochs: 64
+  dropout: 0.5
+  regularization: 0.01
   num-bases: -1
   normalization: True
   self-loop: False
@@ -16,10 +17,10 @@ rgcn-params:
   seed: 0
 
 files:
-  train_inter_file: "data/9606.train_interactions.pkl"
-  valid_inter_file: "data/9606.valid_interactions.pkl"
-  test_inter_file: "data/9606.test_interactions.pkl"
-  data_file: "data/9606.annotations.tsv"
-  terms_file: "data/9606.terms.tsv"
-  precomputed_edges_file: "data/9606.edges_tax.pkl"
-  output_model: "data/tax_human_model.pt"
+  train_inter_file: "data/ppi/9606.train_interactions.pkl"
+  valid_inter_file: "data/ppi/9606.valid_interactions.pkl"
+  test_inter_file: "data/ppi/9606.test_interactions.pkl"
+  data_file: "data/ppi/9606.annotations.tsv"
+  terms_file: "data/ppi/9606.terms.tsv"
+  precomputed_edges_file: "data/ppi/9606.edges_tax.pkl"
+  output_model: "data/ppi/tax_human_model.pt"
