--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.beust:jcommander:1.72'
     implementation 'org.apache.jena:apache-jena-libs:3.17.0'
     implementation 'de.tu-dresden.inf.lat.jcel:jcel-owlapi:0.24.1'
+    implementation 'net.sourceforge.owlapi:owlapi-distribution:4.5.19'
     implementation 'org.semanticweb.elk:elk-distribution:0.4.3'
     implementation 'net.sourceforge.owlapi:org.semanticweb.hermit:1.3.8.413'
     implementation 'org.codehaus.groovy:groovy-all:2.4.15'
