--- a/mowl/examples/GNNSim/config/ppi/yeast/taxonomy.yaml
+++ b/mowl/examples/GNNSim/config/ppi/yeast/taxonomy.yaml
@@ -3,18 +3,29 @@ general:
   graph-gen-method: taxonomy
   use-case: ppi
 
-rgcn-params:
+
+data-params:
+  train-size: 10000
+  val-size: -1
+  test-size: -1
+
+
+gnn-sim-params:
   lr: 0.00001
-  n-hidden: 3
-  batch-size: 128
+  bs: 128
   epochs: 64
-  dropout: 0.5
-  regularization: 0.001
-  num-bases: -1
+  regularization: 0.00
   normalization: True
-  self-loop: False
-  min-edges: 100
+  self-loop: True
   seed: 0
+  min-edges: 0
+
+ppi-model-params:
+  siamese: True
+  dropout: 0.5
+  n-hid: 3
+  residual: False
+  num-bases: -1
 
 files:
   train_inter_file: "data/ppi/4932.train_interactions.pkl"
@@ -23,4 +34,4 @@ files:
   data_file: "data/ppi/4932.annotations.tsv"
   terms_file: "data/ppi/4932.terms.tsv"
   precomputed_edges_file: "data/ppi/4932.edges_tax.pkl"
-  output_model: "data/ppi/tax_yeast_model.pt"
+  output_model: "data/ppi/tax_yeast_model_0_short.pt"
