--- a/mowl/examples/GNNSim/config/ppi/yeast/taxonomyGIN.yaml
+++ b/mowl/examples/GNNSim/config/ppi/yeast/taxonomyGIN.yaml
@@ -1,31 +1,29 @@
 general:
   ontology: data/ppi/go.owl
-  graph-gen-method: dl2vec
+  graph-gen-method: taxonomy
   use-case: ppi
 
-
 data-params:
-  train-size: -1
-  val-size: -1
-  test-size: -1
+  train-size: 10000
+  val-size: 5000
+  test-size: 5000
 
 
 gnn-sim-params:
-  lr: 0.000001
-  bs: 128
-  epochs: 32
-  regularization: 0.003
-  normalization: True
-  self-loop: True
-  seed: 0
-  min-edges: 0
+ lr: 0.001
+ bs: 32
+ epochs: 32
+ regularization: 0.00001
+ normalization: True
+ self-loop: True
+ seed: 0
+ min-edges: 0
 
 ppi-model-params:
   siamese: True
-  dropout: 0.5
-  n-hid: 3
-  residual: True
-  num-bases: -1
+  act: relu
+  n-hid: 1
+  residual: False
 
 files:
   train_inter_file: "data/ppi/4932.train_interactions.pkl"
@@ -33,5 +31,5 @@ files:
   test_inter_file: "data/ppi/4932.test_interactions.pkl"
   data_file: "data/ppi/4932.annotations.tsv"
   terms_file: "data/ppi/4932.terms.tsv"
-  output_model: "data/ppi/dl2vec_yeast_model_1v22.pt"
-
+  precomputed_edges_file: "data/ppi/4932.edges_tax.pkl"
+  output_model: "data/ppi/tax_yeast_model_gin.pt"
