--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ cover-package=mowl
 show_missing = True
 
 [flake8]
-ignore = F401, W605
+ignore = F401, W605, E402
 max-line-length = 99
 
 [pycodestyle]
