--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ with-coverage=1
 cover-erase=1
 cover-package=mowl
 logging-filter=mowl
-
+exclude-dir=tests/models/
 [coverage:report]
 show_missing = True
 
