--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -8,12 +8,16 @@ version: 2
 # Set the version of Python and other tools you might need
 build:
   os: ubuntu-20.04
+  apt_packages:
+    - openjdk-11-jre
+    - openjdk-11-jdk
   tools:
     python: "miniconda3-4.7"
     # You can also specify other tool versions:
     # nodejs: "16"
     # rust: "1.55"
     # golang: "1.17"
+
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
