--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -11,8 +11,9 @@ build:
   apt_packages:
     - openjdk-11-jre
     - openjdk-11-jdk
-  commands:
-    - ./gradle_install.sh
+  jobs:
+    pre_install"
+      - ./gradle_install.sh
    # - ./build_jars.sh
   tools:
     python: "miniconda3-4.7"
