:pushpin: #42 updated dependencies for Python 3.8 and 3.9

--- a/.github/workflows/python-package_3_8.yml
+++ b/.github/workflows/python-package_3_8.yml
@@ -28,7 +28,7 @@ jobs:
         auto-update-conda: true
         python-version: ${{ matrix.python-version }}
         activate-environment: anaconda-client-env
-        environment-file: environment.yml
+        environment-file: envs/environment_3_8.yml
         auto-activate-base: false
         channels: conda-forge
     - name: Build JAR files
