--- a/envs/environment_3_8.yml
+++ b/envs/environment_3_8.yml
@@ -5,7 +5,7 @@ dependencies:
   - python=3.8
   - click
   - deprecated
-  - gensim
+  - gensim>=4.3.0
   - gradle
   - JPype1=1.3.0
   - matplotlib
