--- a/envs/environment_dev_3_9.yml
+++ b/envs/environment_dev_3_9.yml
@@ -29,10 +29,8 @@ dependencies:
     - build
     - pykeen>=1.9.*
     - sphinx-rtd-theme
-    - nose
-    - nose-exclude
+    - pytest
     - coverage
-    - pinocchio
     - flake8
     - autopep8
     - memory-profiler
