--- a/.github/workflows/python-package_3_8.yml
+++ b/.github/workflows/python-package_3_8.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 nose==1.3.7 coverage pinocchio nose-exclude
+        python -m pip install flake8 pytest coverage
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -47,4 +47,4 @@ jobs:
         flake8 mowl --count --exit-zero --max-complexity=20 --max-line-length=127 --statistics
     - name: Test with nose
       run: |
-        nosetests tests
+        pytest tests
