--- a/.github/workflows/python-package_3_8.yml
+++ b/.github/workflows/python-package_3_8.yml
@@ -45,6 +45,6 @@ jobs:
         # flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 mowl --count --exit-zero --max-complexity=20 --max-line-length=127 --statistics
-    - name: Test with nose
+    - name: Test with pytest
       run: |
-        pytest tests
+        pytest tests -x
