:rewind: go back to nosetests for python 3.8 and 3.9.

--- a/envs/environment_dev_3_8.yml
+++ b/envs/environment_dev_3_8.yml
@@ -14,7 +14,6 @@ dependencies:
   - JPype1
   - pandas
   - protobuf
-  - pytest
   - pyyaml
   - requests
   - scipy
@@ -29,8 +28,10 @@ dependencies:
     - build
     - pykeen>=1.9.*
     - sphinx-rtd-theme
-    - pytest
+    - nose
+    - nose-exclude
     - coverage
+    - pinocchio
     - flake8
     - autopep8
     - memory-profiler
