--- a/.github/workflows/python-package_3_8.yml
+++ b/.github/workflows/python-package_3_8.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest coverage
+        python -m pip install flake8 nose pinocchio nose-exclude coverage
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -45,6 +45,6 @@ jobs:
         # flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 mowl --count --exit-zero --max-complexity=20 --max-line-length=127 --statistics
-    - name: Test with pytest
+    - name: Test with nose
       run: |
-        pytest tests -x
+        nosetests tests
