--- a/.github/workflows/python-package_3_10.yml
+++ b/.github/workflows/python-package_3_10.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
 
-    runs-on: ${{ matrix.os }}
+    runs-on: self-hosted
     strategy:
       fail-fast: false
       matrix:
