--- a/.github/workflows/python-package_3_10.yml
+++ b/.github/workflows/python-package_3_10.yml
@@ -24,6 +24,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: conda-incubator/setup-miniconda@v2
+      env:
+          CONDA: ~/miniconda3
+
       with:
         auto-update-conda: true
         python-version: ${{ matrix.python-version }}
