--- a/.github/workflows/python-package_3_10.yml
+++ b/.github/workflows/python-package_3_10.yml
@@ -25,7 +25,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: conda-incubator/setup-miniconda@v2
       env:
-          CONDA: ~/miniconda3
+          CONDA: ~/miniconda3/condabin/
 
       with:
         auto-update-conda: true
