--- a/.github/workflows/python-package_3_11.yml
+++ b/.github/workflows/python-package_3_11.yml
@@ -25,7 +25,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: conda-incubator/setup-miniconda@v2
       env:
-          CONDA: ~/miniconda3/bin/
+          CONDA: ~/miniconda3/bin/conda
       with:
         auto-update-conda: true
         python-version: ${{ matrix.python-version }}
