--- a/setup.cfg
+++ b/setup.cfg
@@ -17,3 +17,7 @@ max-line-length = 99
 [pycodestyle]
 recursive=1
 in-place=1
+
+[tool:pytest]
+markers =
+    slow: marks test as slow (inverse is "not slow")
