--- a/envs/environment_3_10.yml
+++ b/envs/environment_3_10.yml
@@ -1,13 +1,13 @@
-name: mowl
+name: mowl310
 channels:
   - conda-forge
 dependencies:
-  - python=3.8
+  - python=3.10
   - click
   - deprecated
-  - gensim
+  - gensim>=4.3.0
   - gradle
-  - JPype1=1.3.0
+  - JPype1=1.4.1
   - matplotlib
   - networkx
   - numpy
@@ -22,6 +22,6 @@ dependencies:
   - urllib3
   - pip
   - pip:
-    - pykeen==1.9.0
+    - pykeen>=1.9.1
     - temp
     
