--- a/.github/workflows/python-package_3_8.yml
+++ b/.github/workflows/python-package_3_8.yml
@@ -28,7 +28,7 @@ jobs:
         auto-update-conda: true
         python-version: ${{ matrix.python-version }}
         activate-environment: anaconda-client-env
-        environment-file: environment.yml
+        environment-file: envs/environment_3_8.yml
         auto-activate-base: false
         channels: conda-forge
     - name: Build JAR files
@@ -37,7 +37,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 nose==1.3.7 coverage pinocchio nose-exclude
+        python -m pip install flake8 nose pinocchio nose-exclude coverage
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
