--- a/.github/workflows/python-package_3_11.yml
+++ b/.github/workflows/python-package_3_11.yml
@@ -33,6 +33,7 @@ jobs:
         channels: conda-forge
     - name: Build JAR files
       run: |
+        java -version
         conda list
         bash build_jars.sh
     - name: Install dependencies
