--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -16,7 +16,7 @@ build:
       - ./gradle_install.sh
    # - ./build_jars.sh
   tools:
-    python: "miniconda3-4.7"
+    python: "mambaforge-22.9"
     # You can also specify other tool versions:
     # nodejs: "16"
     # rust: "1.55"
