--- a/.github/ISSUE_TEMPLATE/model.yml
+++ b/.github/ISSUE_TEMPLATE/model.yml
@@ -5,7 +5,7 @@ body:
   - type: dropdown
     id: models
     attributes:
-      label: mOWL support different types of models. Select which type fits better for your suggestion:
+      label: mOWL support different types of models. Select which type fits better for your suggestion.
       multiple: false
       options:
         - Ontology graph projection
