--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -11,6 +11,7 @@ build:
   apt_packages:
     - openjdk-11-jre
     - openjdk-11-jdk
+    - graphviz
   jobs:
     pre_install:
       - ./gradle_install.sh
