:memo: updated docs for version 0.3.0

--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -22,6 +22,7 @@ dependencies:
     - deprecated
     - nbsphinx
     - sphinx-gallery
+    - sphinx-rtd-theme
     - ipython
     - memory-profiler
     - matplotlib
