--- a/.github/workflows/python-package_3_8.yml
+++ b/.github/workflows/python-package_3_8.yml
@@ -31,6 +31,7 @@ jobs:
         environment-file: envs/environment_3_8.yml
         auto-activate-base: false
         channels: conda-forge
+        use-mamba: true
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
