--- a/envs/environment_3_11.yml
+++ b/envs/environment_3_11.yml
@@ -7,17 +7,17 @@ dependencies:
   - deprecated
   - gensim>=4.3.0
   - gradle
-  - JPype1=1.4.1
+  - JPype1=1.5.0
   - pandas
   - pytorch
   - pyyaml
   - requests
   - scikit-learn
-  - scipy  
+  - scipy<1.13.0  
   - tqdm
   - urllib3
   - pip
   - pip:
-    - pykeen>=1.10.1
+    - pykeen==1.10.2
     - temp
     
