--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -50,7 +50,7 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     implementation 'org.slf4j:slf4j-api:1.7.25'
-    implementation 'org.slf4j:slf4j-simple:1.7.25'
+    // implementation 'org.slf4j:slf4j-simple:1.7.25'
     implementation 'com.beust:jcommander:1.72'
     implementation 'org.apache.jena:apache-jena-libs:3.17.0'
     implementation 'de.tu-dresden.inf.lat.jcel:jcel-owlapi:0.24.1'
