--- a/envs/environment_dev_3_9.yml
+++ b/envs/environment_dev_3_9.yml
@@ -28,6 +28,7 @@ dependencies:
     - build
     - pykeen==1.10.2
     - sphinx-rtd-theme
+    - sphinx-automodapi
     - nose
     - nose-exclude
     - coverage
