--- a/docs/Makefile
+++ b/docs/Makefile
@@ -14,7 +14,10 @@ help:
 
 .PHONY: help Makefile
 
+APIDIR        = $(SOURCEDIR)/api
+
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
+	@rm -f $(APIDIR)/*.rst
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
