🔧 Updated Python version support, Changelog, Readme...

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ exclude-dir=tests/models/
 show_missing = True
 
 [flake8]
-ignore = F401, W605, E402
+ignore = W605, E402
 max-line-length = 99
 
 [pycodestyle]
