--- a/.github/workflows/python-package_3_13.yml
+++ b/.github/workflows/python-package_3_13.yml
@@ -31,7 +31,7 @@ jobs:
         environment-file: envs/environment_3_13.yml
         auto-activate-base: false
         channels: conda-forge
-        use-mambda: true
+        use-mamba: true
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
