--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "main", develop ]
 
 jobs:
-  python-3.9:
+  python-3-9:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -46,7 +46,7 @@ jobs:
       run: |
         nosetests tests
 
-  python-3.10:
+  python-3-10:
 
     runs-on: ${{ matrix.os }}
     strategy:
@@ -84,7 +84,7 @@ jobs:
         pytest -m "not slow" -p no:faulthandler
 
 
-  python-3.11:
+  python-3-11:
 
     runs-on: ${{ matrix.os }}
     strategy:
@@ -121,7 +121,7 @@ jobs:
       run: |
         pytest -m "not slow" -p no:faulthandler
 
-  python-3.12:
+  python-3-12:
 
     runs-on: ${{ matrix.os }}
     strategy:
