--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -1,7 +1,7 @@
 channels:
   - conda-forge
 dependencies:
-  - python=3.9
+  - python=3.13
   - click
   - deprecated
   - gensim>=4.3.0
@@ -17,7 +17,8 @@ dependencies:
   - urllib3
   - pip
   - pip:
-    - pykeen>=1.10.1
+    - pykeen>=1.11.1
+    - class-resolver==0.6.1
     - temp
     - deprecated
     - nbsphinx
