--- a/envs/environment_dev_3_12.yml
+++ b/envs/environment_dev_3_12.yml
@@ -25,9 +25,9 @@ dependencies:
     - gensim>=4.3.0
     - scipy<1.16.0
     - build
-    - pykeen==1.11.0
+    - pykeen==1.11.1
     - numpy
-    - class-resolver==0.5.4
+    - class-resolver==0.6.1
     - sphinx-rtd-theme
     - pytest
     - pytest-faulthandler
@@ -35,10 +35,12 @@ dependencies:
     - flake8
     - autopep8
     - memory-profiler
+    - matplotlib
   - jupyter
   - ipykernel
   - sphinx
   - sphinx-gallery
+  - sphinx-automodapi
   - nbsphinx
   - mock
 
